Change history for Perl extension PDF::Table.

=== Version 1.003 (2021-01-01)  UNRELEASED

 README.md, lib/PDF/Table.pm, INFO/Table.html
  2021 copyright. NOT archiving Changes yet.

=== Version 1.002 (2020-12-27)

 README.md, lib/PDF/Table.pm, Makefile.PL
  Miscellaneous updates to clean up support URLs, emails, etc.

 util/pod2cpanhtml.pl
  Remove use of search.cpan.org CSS reference, as that site no longer exists.
   Looking for a good replacement, possibly Bootstrap, that doesn't require 
   that a phone be turned to landscape orientation in order to read text at
   a decent size.

 lib/PDF/Table.pm
  Cells spanning columns only had the first part (cell) of the bottom 
   horizontal rule drawn. Reported by "stefanalt". Fixed to draw full spanned 
   width.

 t/PDF-Table.t 
  One calculated value was considerably different between standard Perl (uses
   doubles for floats), long-double Perl, and quad-math Perl. Round the 
   calculated value to 6 decimal digits so that it works on any system.

=== Version 1.001 (2020-11-05)

 lib/PDF/Table.pm  fix edge case where no borders led to no rules [GH 55].

 t/manifest.t, t/pod.t  
  Make author-only (AUTHOR_TESTING=1). ref [GH 61]
   
 lib/PDF/Table.pm, t/pod.t
  POD change =head5 to =head4, to look better and stop older POD checkers 
   from complaining (in t/pod.t). Also minimum Test::Pod version 1.52 
   (was 1.00). ref [GH 61].

 examples/sample1.pl, t/lib/TestData.pm, INFO/Deprecated, lib/PDF/Table.pm
  Replace deprecated setting names by current names in the POD, examples, and
   t-tests. After November 2022, settings names (args) with a leading dash 
   (hyphen) will no longer be permitted.

=== Version 1.000 (2020-11-03)

 INFO/Deprecated, INFO/Table.html, lib/PDF/Table.pm
  Final cleanup of POD and generation of HTML documentation, and listing of
   all deprecated setting names.

 t/lib/PDFAPI2Mock.pm  add linedash dummy call so t tests can run.
