@@ -2,6 +2,8 @@ Change history for Perl extension PDF::Table.
 
 === Version 1.003 (2021-01-01)  UNRELEASED
 
+ lib/PDF/Table.pm   minor comment updates
+
  README.md, lib/PDF/Table.pm, INFO/Table.html
   2021 copyright. NOT archiving Changes yet.
 
